ready for minim

--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -834,10 +834,10 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "4032"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,16 +848,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "N = 3 # 5\n",
+    "N = 6\n",
     "GRID = {'tauDecayNMDA':np.linspace(60, 120, N+1),\n",
-    "        'Nsyn1':np.linspace(1, 15, N, dtype=int),\n",
-    "        'Nsyn2':np.linspace(1, 15, N, dtype=int),\n",
+    "        'Nsyn1':np.linspace(2, 12, N, dtype=int),\n",
+    "        'Nsyn2':np.linspace(2, 12, N, dtype=int),\n",
     "        'Tnsyn20Hz':np.linspace(30, 70, N-2),\n",
     "        'Tnsyn3Hz':np.linspace(100, 1000, N-2)}\n",
     "\n",
@@ -872,58 +872,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0591636582461517\n",
-      "{'filename': 'data/calib/tauDecayNMDA_92.500000--Nsyn1_8--Nsyn2_5--Tnsyn_1683.333333.npz', 'tauDecayNMDA': 92.5, 'Nsyn1': 8, 'Nsyn2': 5, 'Tnsyn': 1683.3333333333335}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "from analyz.IO.npz import load_dict\n",
-    "from analyz.workflow.batch_run import GridSimulation\n",
+    "Ngrid= 7\n",
+    "GRID = {'alphaZn': np.linspace(0.15, 0.5, Ngrid),\n",
+    "        'tauRiseZn':np.linspace(5, 50, Ngrid-1),\n",
+    "        'tauDecayZn':np.linspace(50, 500, Ngrid-1),\n",
+    "        'Deltax0':np.linspace(0.3, 0.7, Ngrid-2),\n",
+    "        'deltax':np.linspace(0.05, 0.3, Ngrid-2)}\n",
     "\n",
-    "calib_data = load_dict('data/exp_data_for_calibration.npz')\n",
+    "np.savez(os.path.join('data', 'calib', 'free-zinc-calib-grid.npz'), **GRID)\n",
     "\n",
-    "sim = GridSimulation(os.path.join('data', 'calib', 'chelated-zinc-calib-grid.npz'))\n",
-    "\n",
-    "def compute_residual(index, condition='chelated'):\n",
-    "\n",
-    "    try:\n",
-    "        sim_data = load_dict(os.path.join('data', 'calib', sim.params_filename(index)+'.npz'))\n",
-    "        Residual = 1.\n",
-    "        for cond in ['20Hz_protocol', '3Hz_protocol']:\n",
-    "            tcond = (sim_data['t']>(sim_data['%s_tstart' % cond]-calib_data['DT0_%s' % cond])) &\\\n",
-    "                (sim_data['t']<sim_data['%s_tstart' % cond]-calib_data['DT0_%s' % cond]+\\\n",
-    "                 calib_data['DTfull_%s' % cond])\n",
-    "            trace_model = -1e3*(sim_data['Ic'][tcond]-sim_data['Ic'][tcond][0]) # - sign\n",
-    "            trace_exp = calib_data['Iexp_%s_%s' % (condition, cond)]\n",
-    "            Residual *= 1+np.sum((trace_model-trace_exp)**2)/np.sum((trace_exp)**2)\n",
-    "    except FileNotFoundError:\n",
-    "        print(sim.params_filename(index)+'.npz', 'not found')\n",
-    "        Residual = 1e10\n",
-    "    return Residual\n",
-    "\n",
-    "Residuals = np.ones(int(sim.N))*np.inf\n",
-    "for i in range(int(sim.N)):\n",
-    "    Residuals[i] = compute_residual(i)\n",
-    "\n",
-    "ibest = np.argmin(Residuals)\n",
-    "print(Residuals[ibest])\n",
-    "from model import Model\n",
-    "best_chelated_config = {'filename':os.path.join('data', 'calib', sim.params_filename(ibest)+'.npz')}\n",
-    "sim.update_dict_from_GRID_and_index(ibest, best_chelated_config) # update Model parameters\n",
-    "np.savez('data/best_chelated_config.npz', **best_chelated_config)\n",
-    "print(best_chelated_config)\n"
+    "# Making a bash script to run a scan on the above grid grid\n",
+    "sim = GridSimulation(GRID) # os.path.join('data', 'calib', 'passive-grid.npz'))\n",
+    "bs = bash_script('calib-free-zinc')\n",
+    "bs.script = sim.build_script('python calibration_runs.py free-zinc-calib',\n",
+    "                             base_script=bs.script, simultaneous_runs=3*8)\n",
+    "bs.write(folder='./bash/')"
    ]
   },
   {
@@ -1513,31 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "N=8\n",
-    "GRID = {'tauDecayNMDA':np.linspace(65, 120, N),\n",
-    "        'Nsyn1':np.linspace(5, 50, N, dtype=int),\n",
-    "        'Nsyn2':np.linspace(5, 50, N, dtype=int),\n",
-    "        'Tnsyn3Hz':np.linspace(20, 2000, N)}\n",
-    "\n",
-    "np.savez(os.path.join('data', 'calib', 'chelated-zinc-calib-grid.npz'), **GRID)\n",
-    "\n",
-    "# Making a bash script to run a scan on the above grid grid\n",
-    "sim = GridSimulation(GRID) # os.path.join('data', 'calib', 'passive-grid.npz'))\n",
-    "bs = bash_script('calib-chelated-zinc')\n",
-    "bs.script = sim.build_script('python calibration_runs.py chelated-zinc-calib',\n",
-    "                             base_script=bs.script, simultaneous_runs=3*8)\n",
-    "bs.write(folder='./bash/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -1545,10 +1490,10 @@
     {
      "data": {
       "text/plain": [
-       "6300"
+       "4096"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,97 +1503,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from analyz.workflow.batch_run import slurm_script, bash_script, GridSimulation\n",
-    "\n",
-    "Ngrid= 3 # 7\n",
-    "GRID = {'alphaZn': np.linspace(0.15, 0.5, Ngrid),\n",
-    "        'tauRiseZn':np.linspace(5, 50, Ngrid-1),\n",
-    "        'tauDecayZn':np.linspace(50, 500, Ngrid-1),\n",
-    "        'Deltax0':np.linspace(0.3, 0.7, Ngrid-2),\n",
-    "        'deltax':np.linspace(0.05, 0.3, Ngrid-2)}\n",
-    "\n",
-    "np.savez(os.path.join('data', 'calib', 'free-zinc-calib-grid.npz'), **GRID)\n",
-    "\n",
-    "# Making a bash script to run a scan on the above grid grid\n",
-    "sim = GridSimulation(GRID) # os.path.join('data', 'calib', 'passive-grid.npz'))\n",
-    "bs = bash_script('calib-free-zinc')\n",
-    "bs.script = sim.build_script('python calibration_runs.py free-zinc-calib',\n",
-    "                             base_script=bs.script, simultaneous_runs=3*8)\n",
-    "bs.write(folder='./bash/')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "### Find minimum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 345,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0716840630491795\n",
-      "{'filename': 'data/calib/tauDecayNMDA_120.000000--Nsyn1_2--Nsyn2_2--Tnsyn_100.000000.npz', 'tauDecayNMDA': 120.0, 'Nsyn1': 2, 'Nsyn2': 2, 'Tnsyn': 100.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "from analyz.IO.npz import load_dict\n",
-    "from analyz.workflow.batch_run import GridSimulation\n",
+    "### Find minimum\n",
     "\n",
-    "calib_data = load_dict('data/exp_data_for_calibration.npz')\n",
-    "\n",
-    "sim = GridSimulation(os.path.join('data', 'calib', 'chelated-zinc-calib-grid.npz'))\n",
-    "\n",
-    "def compute_residual(index, condition='chelated'):\n",
-    "\n",
-    "    try:\n",
-    "        sim_data = load_dict(os.path.join('data', 'calib', sim.params_filename(index)+'.npz'))\n",
-    "        Residual = 1.\n",
-    "        for cond in ['20Hz_protocol', '3Hz_protocol']:\n",
-    "            tcond = (sim_data['t']>(sim_data['%s_tstart' % cond]-calib_data['DT0_%s' % cond])) &\\\n",
-    "                (sim_data['t']<sim_data['%s_tstart' % cond]-calib_data['DT0_%s' % cond]+\\\n",
-    "                 calib_data['DTfull_%s' % cond])\n",
-    "            trace_model = -1e3*(sim_data['Ic'][tcond]-sim_data['Ic'][tcond][0]) # - sign\n",
-    "            trace_exp = calib_data['Iexp_%s_%s' % (condition, cond)]\n",
-    "            Residual *= 1+np.sum((trace_model-trace_exp)**2)/np.sum((trace_exp)**2)\n",
-    "    except FileNotFoundError:\n",
-    "        print(sim.params_filename(index)+'.npz', 'not found')\n",
-    "        Residual = 1e10\n",
-    "    return Residual\n",
-    "\n",
-    "\n",
-    "Residuals = np.ones(int(sim.N))*np.inf\n",
-    "for i in range(int(sim.N)):\n",
-    "    Residuals[i] = compute_residual(i)\n",
-    "\n",
-    "ibest = np.argmin(Residuals)\n",
-    "print(Residuals[ibest])\n",
-    "from model import Model\n",
-    "best_chelated_config = {'filename':os.path.join('data', 'calib', sim.params_filename(ibest)+'.npz')}\n",
-    "sim.update_dict_from_GRID_and_index(ibest, best_chelated_config) # update Model parameters\n",
-    "np.savez('data/best_chelated_config.npz', **best_chelated_config)\n",
-    "print(best_chelated_config)"
+    "is performed in the script calibration_runs.py"
    ]
   },
   {
