--- a/Calibration_from_data.ipynb
+++ b/Calibration_from_data.ipynb
@@ -184,8 +184,8 @@
     "    'tauRiseZn_min':1, 'tauRiseZn_max':100, 'N_tauRiseZn':6,\n",
     "    'tauDecayZn_min':100, 'tauDecayZn_max':1000, 'N_tauDecayZn':6,\n",
     "    'Deltax0_min':0.2, 'Deltax0_max':1., 'N_Deltax0':6,\n",
-    "    'deltax_min':0.01, 'deltax_max':0.2, 'N_deltax':6,\n",
-    "    }\n",
+    "    'deltax_min':0.01, 'deltax_max':0.2, 'N_deltax':6}\n",
+    "\n",
     "Model= Model3\n",
     "GRID = {'alphaZn':np.linspace(Model['alphaZn_min'], Model['alphaZn_max'], Model['N_alphaZn']),\n",
     "        'tauRiseZn':np.linspace(Model['tauRiseZn_min'],Model['tauRiseZn_max'], Model['N_tauRiseZn']),\n",
