--- a/model-calibration/chelated-zinc.ipynb
+++ b/model-calibration/chelated-zinc.ipynb
@@ -91,30 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "grid_index  ->  896\n",
-      "filename  ->  data/calib/tauDecayNMDA_70.000000--Nsyn1_7--Nsyn2_5--Tnsyn20Hz_30.000000--Tnsyn3Hz_30.000000.npz\n",
-      "tauDecayNMDA  ->  70.0\n",
-      "Nsyn1  ->  7\n",
-      "Nsyn2  ->  5\n",
-      "Tnsyn20Hz  ->  30.0\n",
-      "Tnsyn3Hz  ->  30.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from analyz.IO.npz import load_dict\n",
+    "from model import add_value_to_study_data\n",
     "D = load_dict('./data/best_chelatedZn_config.npz')\n",
-    "for key in D:\n",
-    "    print(key, ' -> ', D[key])"
+    "\n",
+    "for key in ['Nsyn1', 'Nsyn2']:\n",
+    "    add_value_to_study_data(key, int(D[key]))\n",
+    "for key in ['Tnsyn20Hz', 'Tnsyn3Hz']:\n",
+    "    add_value_to_study_data(key, '%.0f ms' % D[key])"
    ]
   },
   {
