--- a/model-calibration/free-zinc.ipynb
+++ b/model-calibration/free-zinc.ipynb
@@ -80,6 +80,32 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "{'alphaZn': array([0.15, 0.22, 0.29, 0.36, 0.43, 0.5 , 0.57]),\n",
+       " 'tauRiseZn': array([ 5., 14., 23., 32., 41., 50., 59.]),\n",
+       " 'tauDecayZn': array([ 50., 140., 230., 320., 410., 500., 590.]),\n",
+       " 'Deltax0': array([0.3, 0.4, 0.5, 0.6, 0.7, 0.8]),\n",
+       " 'deltax': array([0.05, 0.1 , 0.15])}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GRID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
