added bash script

--- a/model-calibration/free-zinc.ipynb
+++ b/model-calibration/free-zinc.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -14,19 +12,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Need to be in parent directory (e.g. cd ..)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -42,10 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Running scans over grids for model parameters\n",
@@ -58,18 +50,7 @@
     "## ZINC-MODULATION PROPS\n",
     "GRID = {'alphaZn':np.linspace(Model['alphaZn_min'], Model['alphaZn_max'], Model['N_alphaZn']),\n",
     "        'tauRiseZn':np.linspace(Model['tauRiseZn_min'],Model['tauRiseZn_max'], Model['N_tauRiseZn']),\n",
-    "        'tauDecayZn':np.linspace(Model['tauDecayZn_min'], Model['tauDecayZn_max'], Model['N_tauDecayZn']),\n",
-    "        # 'Deltax0':np.linspace(Model['Deltax0_min'], Model['Deltax0_max'], Model['N_Deltax0']),\n",
-    "        # 'x0':np.linspace(Model['x0_min'], Model['x0_max'], Model['N_x0']),\n",
-    "        # 'deltax':np.linspace(Model['deltax_min'], Model['deltax_max'], Model['N_deltax']),\n",
-    "        'x0':np.linspace(Model['x0_min'], Model['x0_max'], Model['N_x0'])}\n",
-    "\n",
-    "from numpy import array\n",
-    "GRID = {'alphaZn': array([0.15, 0.22, 0.29, 0.36, 0.43, 0.5 , 0.57]),\n",
-    "        'tauRiseZn': array([ 5., 14., 23., 32., 41., 50., 59.]),\n",
-    "        'tauDecayZn': array([ 50., 140., 230., 320., 410., 500., 590.]),\n",
-    "        'x0': array([0.4, 0.5, 0.6])}\n",
-    "\n",
+    "        'tauDecayZn':np.linspace(Model['tauDecayZn_min'], Model['tauDecayZn_max'], Model['N_tauDecayZn'])}\n",
     "\n",
     "np.savez(os.path.join('data', 'calib', 'free-zinc-calib-grid.npz'), **GRID)\n",
     "\n",
@@ -83,21 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alphaZn': array([0.15, 0.22, 0.29, 0.36, 0.43, 0.5 , 0.57]),\n",
-       " 'tauRiseZn': array([ 5., 14., 23., 32., 41., 50., 59.]),\n",
-       " 'tauDecayZn': array([ 50., 140., 230., 320., 410., 500., 590.]),\n",
-       " 'x0': array([0.3, 0.4, 0.5, 0.6, 0.7, 0.8])}"
+       "{'alphaZn': array([0.05      , 0.09642857, 0.14285714, 0.18928571, 0.23571429,\n",
+       "        0.28214286, 0.32857143, 0.375     , 0.42142857, 0.46785714,\n",
+       "        0.51428571, 0.56071429, 0.60714286, 0.65357143, 0.7       ]),\n",
+       " 'tauRiseZn': array([  5.        ,  26.07142857,  47.14285714,  68.21428571,\n",
+       "         89.28571429, 110.35714286, 131.42857143, 152.5       ,\n",
+       "        173.57142857, 194.64285714, 215.71428571, 236.78571429,\n",
+       "        257.85714286, 278.92857143, 300.        ]),\n",
+       " 'tauDecayZn': array([ 100.        ,  185.71428571,  271.42857143,  357.14285714,\n",
+       "         442.85714286,  528.57142857,  614.28571429,  700.        ,\n",
+       "         785.71428571,  871.42857143,  957.14285714, 1042.85714286,\n",
+       "        1128.57142857, 1214.28571429, 1300.        ])}"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -136,9 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -150,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -198,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -252,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -311,9 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -431,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -505,9 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -525,18 +495,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/home/yann/anaconda3/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
   },
   "language_info": {
@@ -549,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "name": "free-zinc.ipynb"
  },
