adding the pair plot

--- a/Sensitivity_to_Background_Modulation.ipynb
+++ b/Sensitivity_to_Background_Modulation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,25 +20,21 @@
     "\n",
     "base_command = 'python bg_modulation.py run --bg_levels 0 3 6 --NbgSEEDS 1 --active --seed %i --chelated %s --syn_location %i'\n",
     "\n",
-    "## ZINC-MODULATION PROPS\n",
-    "GRID = {'seed':,\n",
-    "        'syn_locations':1+np.arange(10),\n",
-    "         'chelated':}\n",
-    "\n",
     "script, i = '', 0\n",
     "for seed in np.arange(10):\n",
     "    for syn_location in np.arange(1, 11):\n",
     "        for chelated in ['True', 'False']:\n",
-    "           script += base_command % (see, chelated, syn_location)\n",
+    "            script += base_command % (seed, chelated, syn_location)\n",
+    "            i+=1\n",
+    "            if i%7==0:\n",
+    "                script+='\\n'\n",
+    "            else:\n",
+    "                script+=' & \\n'\n",
+    "                \n",
+    "            \n",
     "        \n",
-    "with open('bash/BG-active.sh', 'w'):\n",
-    "    \n",
-    "# Making a bash script to run a scan on the above grid grid\n",
-    "sim = GridSimulation(GRID) # os.path.join('..', 'data', 'calib', 'passive-grid.npz'))\n",
-    "bs = bash_script('BG-active.sh')\n",
-    "bs.script = sim.build_script('python bg_modulation.py run --bg_levels 0 3 6 --NbgSEEDS 1 --active',\n",
-    "                             base_script=bs.script, simultaneous_runs=3*8)\n",
-    "bs.write(folder='bash/')"
+    "with open('bash/BG-active.sh', 'w') as f:\n",
+    "    f.write(script)"
    ]
   },
   {
