starting seed-based compute of full dataset

--- a/Sensitivity_to_Background_Modulation.ipynb
+++ b/Sensitivity_to_Background_Modulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO       Cache size for target \"cython\": 1906 MB.\n",
+      "INFO       Cache size for target \"cython\": 2018 MB.\n",
       "You can call \"clear_cache('cython')\" to delete all files from the cache or manually delete files in the \"/home/yann/.cython/brian_extensions\" directory. [brian2]\n"
      ]
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Namespace(NSTIMs=[0, 2, 4, 6, 8, 10, 12, 14, 16, 18], N_syn_location=5, NbgSEEDS=1, Nsyn=20, active=False, alphaZn=0.4, ampa_only=False, bgSEEDS=[0], bg_level=-1, bg_levels=[0, 1, 2, 3, 4, 5, 6], duration_per_bg_level=2000, save_presynaptic_input=False, seed=10, stimSEEDS=[0], stim_delay=600, stim_duration=20, syn_location=1, syn_locations=[], task='null', use_preloaded_presynact=False, verbose=False)"
+       "Namespace(NSTIMs=[0, 2, 4, 6, 8, 10, 12, 14, 16, 18], N_syn_location=5, NbgSEEDS=1, Nsyn=20, active=False, alphaZn=0.4, ampa_only=False, bgSEEDS=[0], bg_level=-1, bg_levels=[0, 1, 2, 3, 4, 5, 6], duration_per_bg_level=2000, seed=10, stimSEEDS=[0], stim_delay=600, stim_duration=20, store_full_data=False, syn_location=1, syn_locations=[], task='null', verbose=False)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "args.seed = 10\n",
+    "args.seed = 13\n",
     "args.syn_location = 1\n",
+    "args.bg_level = 0\n",
     "args.ampa_only = False\n",
     "# free Zinc data\n",
     "args.alphaZn = 0.45\n",
