adding plots folder

--- a/Sensitivity_to_Background_Modulation.ipynb
+++ b/Sensitivity_to_Background_Modulation.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESP = build_full_dataset(key='passive', filename_only=True)"
+    "RESP = build_full_dataset(key='passive', filename_only=True, nfile_stop=4000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RESP = build_full_dataset(key='active', filename_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +140,7 @@
     "    for acond in CONDS:\n",
     "        AVAILABLE_BG_SEEDS.append(np.unique(RESP['seed'][cond & acond]))\n",
     "        AVAILABLE_STIM_SEEDS.append(np.unique(RESP['stimseed'][cond & acond]))\n",
+    "    print(np.intersect1d(*AVAILABLE_STIM_SEEDS))\n",
     "    available_bg_seeds = np.intersect1d(*AVAILABLE_BG_SEEDS)   \n",
     "    available_stim_seeds = np.intersect1d(*AVAILABLE_STIM_SEEDS)   \n",
     "    #print(available_bg_seeds, available_stim_seeds)\n",
@@ -195,6 +205,37 @@
     "                       Ybar = 15, Ybar_label='15mV ',\n",
     "                       loc=(0.1,.9), orientation='right-bottom')\n",
     "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-134621799b82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m         'shift':100, 'view':[-300,600]}\n\u001b[1;32m      6\u001b[0m \u001b[0mprops\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'syn_location'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplot_single_sim_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRESP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbg_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mprops\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplot_single_sim_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRESP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbg_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mprops\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-6405060e42d9>\u001b[0m in \u001b[0;36mplot_single_sim_data\u001b[0;34m(RESP, alphaZn, view, shift, with_ampa_only, NSTIMs, bg_level, syn_location, seed, stimseed, COLORS, LWS, ampa_color, figsize, VLIM)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mAVAILABLE_BG_SEEDS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRESP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'seed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcond\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0macond\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mAVAILABLE_STIM_SEEDS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRESP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'stimseed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcond\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0macond\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersect1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mAVAILABLE_STIM_SEEDS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0mavailable_bg_seeds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersect1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mAVAILABLE_BG_SEEDS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mavailable_stim_seeds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersect1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mAVAILABLE_STIM_SEEDS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mintersect1d\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py\u001b[0m in \u001b[0;36mintersect1d\u001b[0;34m(ar1, ar2, assume_unique, return_indices)\u001b[0m\n\u001b[1;32m    397\u001b[0m     \u001b[0mar2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masanyarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mar2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    398\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 399\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0massume_unique\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    400\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreturn_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    401\u001b[0m             \u001b[0mar1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mind1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mar1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "props= {'NSTIMs':[0, 2, 6, 8, 10, 12, 14], \n",
+    "        'syn_location':1, 'seed':1, 'stimseed':0, 'VLIM':[-76,-15],\n",
+    "        'alphaZn':[0., 0.45], 'COLORS':[ge.green, 'k'], 'LWS':[2,1,1],\n",
+    "        'with_ampa_only':True,\n",
+    "        'shift':100, 'view':[-300,600]}\n",
+    "props = {'syn_location':0}\n",
+    "fig = plot_single_sim_data(RESP, bg_level=0., **props)\n",
+    "fig = plot_single_sim_data(RESP, bg_level=2., **props)"
    ]
   },
   {
@@ -392,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESP_PER_STIM = build_full_dataset_per_stim(key='prev-active')"
+    "RESP_PER_STIM = build_full_dataset_per_stim(key='active')"
    ]
   },
   {
